# MathModelAgent

./: .dockerignore  .gitignore  CLAUDE.md  README.md  README_EN.md  docker-compose.yml  push-to-dockerhub.sh  网络环境极差时的MathModelAgent配置过程.md
.cursor/rules/: backend-rules.mdc  frontend-rules.mdc  structure.mdc  ws-frontend-backend-interaction.mdc
.github/workflows/: docker-build-push.yml
backend/: .dockerignore  .env.dev  .env.dev.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: md_template.toml  model_config.toml  setting.py  template.md
backend/app/core/: agents.py  flows.py  functions.py  llm.py  prompts.py  workflow.py
backend/app/core/agents/: __init__.py  agent.py  coder_agent.py  coordinator_agent.py  modeler_agent.py  writer_agent.py
backend/app/core/llm/: llm.py  llm_factory.py
backend/app/example/example/2023华数杯C题/: questions.txt  附件.xlsx
backend/app/example/example/2024高教杯C题/: questions.txt  result1_2.xlsx  附件2.xlsx
backend/app/example/example/2025五一杯C题/: 2025-51MCM-Problem C.docx  questions.txt
backend/app/example/example/国赛C题/: 附件1.xlsx
backend/app/example/example/国赛C题/附件3/: result1_1.xlsx
backend/app/models/: model.py  user_output.py
backend/app/routers/: common_router.py  files_router.py  modeling.py  modeling_router.py  ws.py  ws_router.py
backend/app/schemas/: A2A.py  enums.py  request.py  response.py  tool_result.py
backend/app/services/: redis_manager.py  ws_manager.py
backend/app/tests/: get_config_template.py  res.md  test_cite.py  test_common_utils.py  test_e2b.py
backend/app/tests/mock/: res.json
backend/app/tools/: base.py  base_interpreter.py  e2b_interpreter.py  interpreter_factory.py  local_interpreter.py  openalex_scholar.py
backend/app/utils/: RichPrinter.py  cli.py  common_utils.py  data_recorder.py  log_util.py  notebook_serializer.py  track.py
docs/md/: License.md  sponser.md  tutorial.md  网络环境极差时的MathModelAgent配置过程.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/apis/: apiKeyApi.ts  commonApi.ts  filesApi.ts  submitModelingApi.ts
frontend/src/assets/: jupyter.json  style.css
frontend/src/components/: AppSidebar.vue  Bubble.vue  ChatArea.vue  CoderEditor.vue  FileConfirmDialog.vue  Files.vue  LoginForm.vue  ModelingExamples.vue  NavUser.vue  NotebookArea.vue  NotebookCell.vue  SearchForm.vue  ServiceStatus.vue  SystemMessage.vue  Tree.vue  UserStepper.vue  VersionSwitcher.vue  WriterEditor.vue
frontend/src/mock/: 20250428-200915-ebc154d4.json
frontend/src/pages/: index.vue
frontend/src/router/: index.ts
frontend/src/stores/: apiKeys.ts  task.ts
frontend/src/test/: message.json  (+3 more)
(+26 files in other folders)
